--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     <nav>
       <div class="logo">
         <img src="Task/images/logo.png" alt="Logo" />
-        <span>TROIKO</span>
+        <span>Fresh Shop</span>
       </div>
       <div class="links">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#fruits">Fruits</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact Us</a></li>
         </ul>
         <div>
           <img src="Task/images/search.png" alt="search" />
-          <button>Get A Quote</button>
         </div>
       </div>
     </nav>
     <!-- Hero -->
-    <div class="hero">
+    <div class="hero" id="home">
       <div class="right">
         <h1>Welcome to<br />Our Fruits Shop</h1>
         <p>
@@ -43,7 +43,7 @@
       </div>
     </div>
     <!-- Services -->
-    <div class="services">
+    <div class="services" id="services">
       <div class="text">
         <h1>Our Services</h1>
         <p>
@@ -96,7 +96,7 @@
       </div>
     </div>
     <!-- Fresh Fruits -->
-    <div class="fresh">
+    <div class="fresh" id="fruits">
       <div class="text">
         <h1>Fresh Fruits</h1>
         <p>
@@ -181,7 +181,7 @@
       </div>
     </div>
     <!-- Contact Us -->
-    <div class="contact-us">
+    <div class="contact-us" id="contact">
       <div>
         <div class="text">
           <h1>Contact Us</h1>
@@ -194,25 +194,12 @@
           <input type="text" placeholder="Name" />
           <input type="email" placeholder="Email" />
           <textarea placeholder="Message"></textarea>
-          <button class="send-btn">Send Message</button>
+          <button class="send-btn">Send</button>
         </div>
       </div>
       <div class="contact-img">
         <img src="Task/images/orange-dish.png" alt="Contact Us" />
       </div>
-    </div>
-    <!-- Map -->
-    <div class="map">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.2799148192!2d-74.2598676877154!3d40.6976700639477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sin!4v1601515378035!5m2!1sen!2sin"
-        width="100%"
-        height="450"
-        frameborder="0"
-        style="border: 0"
-        allowfullscreen=""
-        aria-hidden="false"
-        tabindex="0"
-      ></iframe>
     </div>
     <!-- Footer -->
     <div class="footer">
